2004-11-14  Geoff Norton  <gnorton@customerdna.com>
	
	* mph.h:  Revernt jonp's removal of MPH_ON_BSD define as sys-mount.c
	and unistd.c still check this configuration value.  This allows mono
	to build on *BSD again.

2004-11-12  Jonathan Pryor <jonpryor@vt.edu>

	* dirent.c: Only access members which exist on the target
	  platform.
	* errno.c: Only export strerror_r if it's available.
	* mph.h: Remove MPH_ON_BSD; use the configure checks instead.
	* sys-mman.c: Only export posix_madvise if it's available.
	* unistd.c: Only export sethostid if it's available.

2004-11-08  Jonathan Pryor <jonpryor@vt.edu>

	* Makefile.am: Add sys-sendfile.c to the build.
	* dirent.c, fcntl.c, unistd.c: Remove
	  compile-time checks for -64 apis (pread64, etc.), as they're
	  superfluous.  GLibc #defines the functions to the appropriate
	  -64 counterpart when necessary, and Darwin is intrinsically
	  large-file-aware, so manual checking on my part is redundant and
	  unnecessary.
	* grp.c: Add checks for non-portable functions getgrnam_r,
	  getgrgid_r.
	* pwd.c: Add checks for non-portable functions getpwnam_r,
	  getpwuid_r.
	* map.c: Remove <poll.h> include.  Building on Tiger (Mac
	  OS X 10.4 beta) breaks when both <poll.h> and <sys/poll.h> are
	  included, so only use <sys/poll.h>.
	* mph.h: Clean up macro handling for type overflow checking.

2004-11-05  Jonathan Pryor <jonpryor@vt.edu>

	* .cvsignore: Ignore generated files.
	* Makefile.am: Add new INCLUDE directives (for glib
	  headers), source; bump library version (so we don't clobber
	  previous versions of libMonoPosixHelper.so).
	* dirent.c: New file; <dirent.h> wrapper functions; 
	  BSD portability fixes.
	* errno.c: New file; <errno.h> wrapper functions
	* fcntl.c: New file; <fcntl.h> wrapper functions;
	  BSD portability fixes.
	* grp.c: New file; <grp.h> wrapper functions;
	  BSD portability fixes.
	* map.c: Updated macro mapping functions (more enums
	  mapped, more error checking, etc.).